--- a/old/src/unit-page.html
+++ b/old/src/unit-page.html
@@ -99,8 +99,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                   <d2l-menu label="Menu">
                     <d2l-menu-item text="Practice Variants">
                         <d2l-menu>
-                            <d2l-menu-item name="practiceUnit" text="Practice"></d2l-menu-item>
-                            <d2l-menu-item name="practiceUnitSelectionmode" text="Selectionmode"></d2l-menu-item>
+                            <d2l-menu-item name="practiceUnit" text="Answer"></d2l-menu-item>
+                            <d2l-menu-item name="practiceUnitSelectionmode" text="Memory"></d2l-menu-item>
                         </d2l-menu>
                     </d2l-menu-item>
                     <d2l-menu-item name="selfCheck" text="Self-check"></d2l-menu-item>
