--- a/Vocabulous/src/unit-page.html
+++ b/Vocabulous/src/unit-page.html
@@ -19,9 +19,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-content.html">
 <link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-menu.html">
 <link rel="import" href="../bower_components/d2l-menu/d2l-menu-item.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
-<link rel="import" href="../bower_components/iron-icons/editor-icons.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="unit-page">
@@ -73,41 +70,34 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       paper-icon-button.back{
         font-size: 0.65em;
-        width: 45px;
-        height: 45px;
+        width: 30px;
+        height: 30px;
         margin-left: -10px;
-        margin-top: -55px;
+        margin-top: -49px;
         position:absolute;
       }
       d2l-dropdown{
         float:right;
       }
-      paper-icon-button.edit{
-        width: 35px;
-        height: 35px;
-        float: right;
-        margin-top: 5px;
-      }
     </style>
 
     <div class="card">
       <h1>Unit 1</h1> <!--Name der Unit-->
-      <paper-icon-button name="backicon" icon="hardware:keyboard-arrow-left" class="back"></paper-icon-button>
+      <paper-icon-button name="backicon" icon="vaadin:chevron-left" class="back"></paper-icon-button>
       <d2l-dropdown>
-              <paper-icon-button style="width: 45px;height: 45px;"class="d2l-dropdown-opener" name="menu" icon="icons:more-vert" noink></paper-icon-button>
+              <paper-icon-button style="width: 35px;height: 35px;"class="d2l-dropdown-opener" name="menu" icon="vaadin:ellipsis-dots-v" noink></paper-icon-button>
               <d2l-dropdown-menu>
                   <d2l-menu label="Menu">
                     <d2l-menu-item text="Practice Variants">
                         <d2l-menu>
-                            <d2l-menu-item name="practiceUnit" text="Answer"></d2l-menu-item>
-                            <d2l-menu-item name="practiceUnitSelectionmode" text="Memory"></d2l-menu-item>
+                            <d2l-menu-item name="practiceUnit" text="Practice Unit"></d2l-menu-item>
                         </d2l-menu>
                     </d2l-menu-item>
                     <d2l-menu-item name="selfCheck" text="Self-check"></d2l-menu-item>
                   </d2l-menu>
               </d2l-dropdown-menu>
       </d2l-dropdown>
-      <paper-icon-button class="edit" name="edit" icon="editor:mode-edit"></paper-icon-button>
+  
       <table id="vocabulary">
         
       </table>
@@ -129,14 +119,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _getPracticeButton(){
         return Polymer.dom(this.root).querySelector("d2l-menu-item[name=practiceUnit]");
       }
-      _getPracticeButtonSelectionmode(){
-        return Polymer.dom(this.root).querySelector("d2l-menu-item[name=practiceUnitSelectionmode]");
-      }
       _getExamButton(){
         return Polymer.dom(this.root).querySelector("d2l-menu-item[name=selfCheck]");
-      }
-      _getEditButton(){
-        return Polymer.dom(this.root).querySelector("paper-icon-button[name=edit]");
       }
     }
     window.customElements.define(UnitPage.is, UnitPage);
