--- a/old/src/create-unit.html
+++ b/old/src/create-unit.html
@@ -54,7 +54,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-color: var(--hover-color);
       }
       td{
-        border: 0.5px solid var(--secondaryFontColorCard);
+        border: 0.75px solid var(--secondaryFontColorCard);
         height: 30px;
         padding: 10px;
         text-align: left;
@@ -122,7 +122,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       iron-icon.plus{
         width: 21px;
         height: 21px;
-        color: var(--app-secondary-color);
+        color: grey;
       }
       paper-button.minus{
         margin: 0px;
