--- a/old/src/translate-page.html
+++ b/old/src/translate-page.html
@@ -110,6 +110,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!--<script src="../develop-javascript/src/classes/translation.min.js" type="module"></script>-->
   <!--<script src="../node_modules/google-translate-api/test.js" type="module"></script>-->
   <!--<script data-main="../develop-javascript/src/translatepage.js" src="./../node_modules/require.js"type="module"></script>-->
+  <script src="../bower_components/jquery/dist/jquery.js"></script>
   <script src="../develop-javascript/src/translatepage.js" type="module"></script>
-  <script src="../develop-javascript/src/test.js" type="module"></script>
 </dom-module>
