--- a/Vocabulous/src/settings-view.html
+++ b/Vocabulous/src/settings-view.html
@@ -268,6 +268,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       paper-dropdown-menu{
         margin-left: 120px;
         margin-top: -30px;
+        width: 65%;
         --disabled-text-color:var(--secondaryFontColorCard);
         -webkit-tap-highlight-color:var(--cardBackgroundcolor);
         --paper-dropdown-menu-color:var(--cardBackgroundcolor);
