bugfixes+result save

--- a/Vocabulous/src/account-view.html
+++ b/Vocabulous/src/account-view.html
@@ -34,6 +34,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/app-layout/app-layout.html">
 <link rel="import" href="../bower_components/iron-icons/communication-icons.html">
 <link rel="import" href="my-icons.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 
 <link rel="import" href="../bower_components/app-storage/app-localstorage/app-localstorage-document.html">
 <link rel="import" href="shared-styles.html">
@@ -177,8 +178,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color:var(--secondaryFontColorCard);
         --paper-input-container-color: var(--secondaryFontColorCard);
         --paper-input-container-focus-color: var(--secondaryFontColorCard);
-        --paper-input-container-invalid-color: var(--secondaryFontColorCard);
+        --paper-input-container-invalid-color: red;
         --paper-input-container-input-color: var(--secondaryFontColorCard);
+      }
+      #confirmPassword{
+        width: 400px;
+        border-radius: 5px;
+        border-color: var(--secondaryFontColorCard);
+        background-color: var(--hover-color);
+        color: var(--secondaryFontColorCard);
       }
     </style>
       <div class="card">
@@ -209,13 +217,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               <td><paper-input class="password" label="Password" char-counter minlength="5" char-counter maxlength="16" required auto-validate error-message="this field must be filled [min. 5 characters]"></paper-input></td>  
             </tr>
           </table>
-                  <div class="buttons">
-                      <paper-button name="edit" raised noink>Edit</paper-button>
-                      <paper-button name="save" raised noink>Save</paper-button>
-                  </div>
-          
       </div>
-         
+      <div class="buttons">
+          <paper-button name="edit" raised noink>Edit</paper-button>
+          <paper-button name="save" raised noink>Save</paper-button>
+      </div>
+      <paper-dialog id="confirmPassword">
+        <h2>Filter</h2>
+        <div>
+            <paper-input class="input" name="newPassword" label="Enter new Password again" error-message="Wrong input! Please try again"></paper-input>
+            <paper-button id="save" name="changePassword" raised noink>Change Password</paper-button>
+        </div>
+      </paper-dialog>
   </template>
   <script>
     class AccountView extends Polymer.Element {
@@ -249,6 +262,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       _getSavebutton(){
         return Polymer.dom(this.root).querySelector("paper-button[name=save]");
+      }
+      _getPaperDialogConfirm(){
+        return Polymer.dom(this.root).querySelector("paper-dialog[id=confirmPassword]");
+      }
+      _getPaperDialogPassword(){
+        return Polymer.dom(this.root).querySelector("paper-input[name=newPassword]");
+      }
+      _getPaperDialogFiltersSave(){
+        return Polymer.dom(this.root).querySelector("paper-button[name=changePassword]");
       }
     }
 
