--- a/old/src/browse-unit.html
+++ b/old/src/browse-unit.html
@@ -69,6 +69,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-left: 40px;
         margin-top: 50px;
         width: 97%;
+        padding: 40px;
         color: var(--secondaryFontColorCard);
         --background-color:var(--cardBackgroundcolor);
         --disabled-text-color:var(--secondaryFontColorCard);
@@ -107,7 +108,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --iron-icon-width: 25px;
         --iron-icon-height: 25px;
         float:right;
-        margin-top: 7.5px;
+        margin-top: 6px;
         --paper-checkbox-unchecked-color: var(--secondaryFontColorCard);
         --paper-checkbox-checked-color: green;
         --paper-checkbox-checked-ink-color: green;
