--- a/old/src/unitresult-page.html
+++ b/old/src/unitresult-page.html
@@ -31,8 +31,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       h2{
         color: var(--app-primary-color);
-        margin-top: -25px;
-        margin-left: 25%;
+        margin-top: 0px;
+        margin-left: 0px;
         font-weight: 300;
         font-size: 18px;
       }
@@ -65,7 +65,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         cols='[{"label":"Name", "type":"string"}, {"label":"Amount", "type":"number"}]'>
       </google-chart>
       <paper-button class="wrongVocabels" name="wrongVocabels" noink raised>Try wrong Words again</paper-button>
-      <h2 class="timer">00:23:14</h2> <!-- benötigte Zeit ausgeben -->
+      <h2 class="timer">Attended Time: </h2> <!-- benötigte Zeit ausgeben -->
     </div>
   </template>
 
