--- a/Vocabulous/src/account-view.html
+++ b/Vocabulous/src/account-view.html
@@ -138,6 +138,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       paper-input.username{
+        padding-bottom: 30px;
         width: 300px;
         margin-left: 40px;
         margin-top: 30px;
@@ -164,7 +165,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         };
       }
       iron-icon.user{
-        
         width: 150px;
         height: 150px;
         margin-top: 20px;
@@ -173,6 +173,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .buttons{
         font-size: 0.65em;
         margin-left: 40px;
+        margin-top: -60px;
+        padding-bottom: 60px;
       }
       paper-input{
         color:var(--secondaryFontColorCard);
@@ -188,6 +190,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-color: var(--hover-color);
         color: var(--secondaryFontColorCard);
       }
+
     </style>
       <div class="card">
           <h1>Account</h1>
@@ -214,18 +217,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </tr>
             <tr>
               <td><paper-input class="username" label="Username"></paper-input></td>
-              <td><paper-input class="password" label="Password" char-counter minlength="5" char-counter maxlength="16" required auto-validate error-message="this field must be filled [min. 5 characters]"></paper-input></td>  
+              <td><paper-input class="password" label="Password" char-counter minlength="5" char-counter maxlength="16" required auto-validate error-message="this field must be filled [min. 5 characters]" type="password"></paper-input></td>  
             </tr>
           </table>
       </div>
       <div class="buttons">
-          <paper-button name="edit" raised noink>Edit</paper-button>
+          <paper-button style="margin-left: 40px;" name="edit" raised noink>Edit</paper-button>
           <paper-button name="save" raised noink>Save</paper-button>
       </div>
       <paper-dialog id="confirmPassword">
-        <h2>Filter</h2>
+        <h2>Password</h2>
         <div>
-            <paper-input class="input" name="newPassword" label="Enter new Password again" error-message="Wrong input! Please try again"></paper-input>
+            <paper-input class="input" name="newPassword" label="Enter new Password again" error-message="Wrong input! Please try again" type="password"></paper-input>
             <paper-button id="save" name="changePassword" raised noink>Change Password</paper-button>
         </div>
       </paper-dialog>
