--- a/Vocabulous/src/overview-page.html
+++ b/Vocabulous/src/overview-page.html
@@ -179,10 +179,14 @@
             <app-toolbar style="font-weight:300">Menu</app-toolbar>
             <app-toolbar><paper-progress name="learn" value="250" min="0" max="800" class="green"></paper-progress></app-toolbar>
             <app-toolbar class="learnprogress">Learn Progress</app-toolbar>
-            <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
+            <iron-selector name="menu" selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
               <a name="home-view"><iron-icon id="homeview" icon="icons:home"></iron-icon><span>Home</span></a>
               <a name="unit-overview"><iron-icon id="unitoverview" icon="av:library-books"></iron-icon><span>Units</span></a>
               <a name="statistics-view"><iron-icon id="statisticsview" icon="editor:show-chart"></iron-icon><span>Statistics</span></a>
+              <a name="overviewWords"><iron-icon id="overviewWords" icon="editor:show-chart"></iron-icon><span>Word-Overview</span></a>
+              <a name="practiceAnswer"><iron-icon id="practiceAnswer" icon="editor:show-chart"></iron-icon><span>Practice-Answer</span></a>
+              <a name="practiceMemory"><iron-icon id="practiceMemory" icon="editor:show-chart"></iron-icon><span>Practice-Memory</span></a>
+              <a name="selfcheck"><iron-icon id="selfcheck" icon="editor:show-chart"></iron-icon><span>Selfcheck</span></a>
               <a name="settings-view"><iron-icon id="settingsview" icon="icons:settings"></iron-icon><span>Settings</span></a>
             </iron-selector>
         </app-drawer>
@@ -222,6 +226,7 @@
         </iron-pages>
       </app-header-layout>
     </app-drawer-layout>
+    <input style="display:none;" name="mode">
     <paper-toast id="toast0" text="Insert all required fields to save!"></paper-toast>
     <paper-toast id="toast1" duration=1000 text="This vocab is correct!"></paper-toast>
     <paper-toast id="toast2" duration=2000 text="This vocab is wrong! Second Try"></paper-toast>
@@ -269,6 +274,18 @@
       _getHomeview(){
         return Polymer.dom(this.root).querySelector("a[name=home-view]");
       }
+      _getWordview(){
+        return Polymer.dom(this.root).querySelector("a[name=overviewWords]");
+      }
+      _getPracticeAnswerview(){
+        return Polymer.dom(this.root).querySelector("a[name=practiceAnswer]");
+      }
+      _getSelfcheckview(){
+        return Polymer.dom(this.root).querySelector("a[name=selfcheck]");
+      }
+      _getPracticeMemoryview(){
+        return Polymer.dom(this.root).querySelector("a[name=practiceMemory]");
+      }
       _getHomeviewPage(){
         return Polymer.dom(this.root).querySelector("home-view[name=home-view]");
       }
@@ -307,6 +324,9 @@
       }
       _getAppdrawer(){
         return Polymer.dom(this.root).querySelector("app-drawer-layout");
+      }
+      _getMenubar(){
+        return Polymer.dom(this.root).querySelector("iron-selector[name=menu]");
       }
       _getSettingsviewTag(){
         return Polymer.dom(this.root).querySelector("settings-view[name=settings-view]");
@@ -392,6 +412,9 @@
       }
       _getUpdateInput(){
         return Polymer.dom(this.root).querySelector("input[name=updateUnit]");
+      }
+      _getModeInput(){
+        return Polymer.dom(this.root).querySelector("input[name=mode]");
       }
     }
 
